headers in notebooks

--- a/examples/Postprocessing_4components.ipynb
+++ b/examples/Postprocessing_4components.ipynb
@@ -1242,7 +1242,7 @@
    "id": "1ba6e565-39be-4325-ba64-80bd01fb9edf",
    "metadata": {},
    "source": [
-    "### Pairwise scatter plots"
+    "### Pairwise scatter and distribution plots"
    ]
   },
   {
